<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_PMPS" Id="{b99545e0-6ffe-4000-842b-c957619de643}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL

{attribute 'pytmc' := ' pv: PLC:TXI:VAC:FFO:01 '}
{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 1^Output'}
g_FastFaultOutput1  :   FB_HardwareFFOutput:= (i_sNetID:='172.21.42.126.1.1'); // change i_sNetID ??

{attribute 'pytmc' := ' pv: PLC:TXI:VAC:FFO:02 '}
{attribute 'TcLinkTo' := '.q_xFastFaultOut:=TIIB[PMPS_FFO]^Channel 2^Output'}
g_FastFaultOutput2  :   FB_HardwareFFOutput:= (i_sNetID:='172.21.42.126.1.1'); // change i_sNetID ??


{attribute 'pytmc' := ' pv: PLC:TXI:VAC:ARB:01 '}
fbArbiter1 : FB_Arbiter(1);

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>