<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL_TXI_VAC_VARIABLES" Id="{99fa0854-e0c4-4ebb-be84-cb1442f0b632}">
    <Declaration><![CDATA[VAR_GLOBAL
{attribute 'pytmc' := 'pv: TXI:SXR:FEE:VAC:OVRDON;
    field: ZNAM Override OFF;
    field: ONAM Override ON;
    io: io;
'}
xSystemOverrideMode1 : BOOL; (* Global system override for the prototype section*)

fbLogHandler : FB_loghandler;
{attribute 'TcLinkTo' := 'TIIB[E3 (EL2794)]^Channel 4^Output'}
qPC1K3_PIP_01_Press_OK AT %Q*:BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>